# ForceField

./: .gitignore  CMakeLists.txt  Makefile  README.md  debugging.txt  energy  energy.cpp  ethane.sdf  input  input.cpp  input.h  input_rdkit.cpp  methane.sdf  output.sdf  test  test.cpp  utility.cpp  utility.h
data/: butane.sdf  ethane.txt  ethane2.txt  ethane_optimal.txt  methane.txt  methane2.txt  methane3.txt  methane_optimal.txt
examples/: Makefile  ff.cpp  t1.cpp  t2.cpp  t3.cpp
include/: energy.h  input.h  optimizers.h  output.h  utility.h
output/: Methane2_out.sdf  Methane3_out.sdf  ethane_input.sdf  ethane_out.sdf  methane2_input.sdf  methane3_input.sdf  mol_input.sdf  mol_out.sdf
parameter_files/: MMFF-I_AppendixA.html
src/: Makefile  energy.cpp  input.cpp  optimizers.cpp  output.cpp  utility.cpp
tests/: Makefile  t1.cpp  t2.cpp  t3.cpp  unit_tests  unit_tests.cpp
